ajout vue about

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
 	<script src="/views/header/header-state.js"></script>
 	<!-- header : menu -->
 	<script src="/views/header/menu/menu.js"></script>
+	<!-- about -->
+	<script src="/views/about/about-module.js"></script>
+	<script src="/views/about/about-state.js"></script>
+	<script src="/views/about/about.html"></script>
 	<!-- home -->
 	<script src="/views/home/home-module.js"></script>
 	<script src="/views/home/home-state.js"></script>
