ajout page contacts
refactoring structure projet

--- a/index.html
+++ b/index.html
@@ -31,20 +31,34 @@
 	<script src="/constantes/funAppStates.js"></script>
 	<script src="/services/popInService.js"></script>
 	<!-- header -->
-	<script src="/views/header/header-module.js"></script>
-	<script src="/views/header/header-state.js"></script>
+	<script src="/components/header/header-module.js"></script>
+	<script src="/components/header/header-state.js"></script>
 	<!-- header : menu -->
-	<script src="/views/header/menu/menu.js"></script>
+	<script src="/components/header/menu/menu.js"></script>
 	<!-- about -->
-	<script src="/views/about/about-module.js"></script>
-	<script src="/views/about/about-state.js"></script>
+	<script src="/components/about/about-module.js"></script>
+	<script src="/components/about/about-state.js"></script>
 	<!-- home -->
-	<script src="/views/home/home-module.js"></script>
-	<script src="/views/home/home-state.js"></script>
-	<script src="/views/home/home.js"></script>
+	<script src="/components/home/home-module.js"></script>
+	<script src="/components/home/home-state.js"></script>
+	<script src="/components/home/home.js"></script>
 	<!-- home/partial1 -->
-	<script src="/views/home/partial1/partial1-state.js"></script>
-	<script src="/views/home/partial1/partial1.js"></script>
+	<script src="/components/home/partial1/partial1-state.js"></script>
+	<script src="/components/home/partial1/partial1.js"></script>
+	<!-- contacts -->
+	<script src="/components/contacts/contacts-module.js"></script>
+	<script src="/components/contacts/contacts-state.js"></script>
+	<script src="/components/contacts/contacts.js"></script>
+	<!-- contacts -->
+	<script src="/components/contacts/contacts-module.js"></script>
+	<script src="/components/contacts/contacts-state.js"></script>
+	<script src="/components/contacts/contacts-contenu.js"></script>
+	<script src="/components/contacts/contacts.js"></script>
+	<!-- contacts : liste -->
+	<script src="/components/contacts/liste/liste-state.js"></script>
+	<!-- contacts : detail -->
+	<script src="/components/contacts/detail/detail-state.js"></script>
+	<script src="/components/contacts/detail/detail.js"></script>
 	<script src="main.js"></script>
 </body>
 </html>
