--- a/index.html
+++ b/index.html
@@ -31,39 +31,49 @@
 	<!-- <div footer></div> -->
 
 	<!-- chargement des scripts -->
-	<script src="modules.js"></script>
-	<script src="/constantes/funAppStates.js"></script>
+	<!-- constantes globales -->
+	<script src="/constantes/constantes.module.js"></script>
+	<script src="/constantes/errors.js"></script>
+	<!-- services globaux -->
+	<script src="/services/services.module.js"></script>
 	<script src="/services/popInService.js"></script>
 	<!-- header -->
-	<script src="/components/header/header-module.js"></script>
-	<script src="/components/header/header-state.js"></script>
+	<script src="/components/header/header.module.js"></script>
+	<script src="/components/header/header.route.js"></script>
 	<!-- header : menu -->
 	<script src="/components/header/menu/menu.js"></script>
 	<!-- about -->
-	<script src="/components/about/about-module.js"></script>
-	<script src="/components/about/about-state.js"></script>
+	<script src="/components/about/about.module.js"></script>
+	<script src="/components/about/about.route.js"></script>
+	<!-- error -->
+	<script src="/components/error/error.module.js"></script>
+	<script src="/components/error/error.route.js"></script>
+	<script src="/components/error/error.js"></script>
 	<!-- home -->
-	<script src="/components/home/home-module.js"></script>
-	<script src="/components/home/home-state.js"></script>
+	<script src="/components/home/home.module.js"></script>
+	<script src="/components/home/home.route.js"></script>
 	<script src="/components/home/home.js"></script>
 	<!-- home/partial1 -->
-	<script src="/components/home/partial1/partial1-state.js"></script>
+	<script src="/components/home/partial1/partial1.route.js"></script>
 	<script src="/components/home/partial1/partial1.js"></script>
 	<!-- contacts -->
-	<script src="/components/contacts/contacts-module.js"></script>
-	<script src="/components/contacts/contacts-state.js"></script>
+	<script src="/components/contacts/contacts.module.js"></script>
+	<script src="/components/contacts/contacts.route.js"></script>
 	<script src="/components/contacts/contacts.js"></script>
 	<!-- contacts -->
-	<script src="/components/contacts/contacts-module.js"></script>
-	<script src="/components/contacts/contacts-state.js"></script>
-	<script src="/components/contacts/contacts-service.js"></script>
-	<script src="/components/contacts/contacts-contenu.js"></script>
+	<script src="/components/contacts/contacts.module.js"></script>
+	<script src="/components/contacts/contacts.route.js"></script>
+	<script src="/components/contacts/contacts.service.js"></script>
+	<script src="/components/contacts/contacts.contenu.js"></script>
 	<script src="/components/contacts/contacts.js"></script>
 	<!-- contacts : liste -->
-	<script src="/components/contacts/liste/liste-state.js"></script>
+	<script src="/components/contacts/liste/liste.route.js"></script>
 	<!-- contacts : detail -->
-	<script src="/components/contacts/detail/detail-state.js"></script>
+	<script src="/components/contacts/detail/detail.route.js"></script>
 	<script src="/components/contacts/detail/detail.js"></script>
+	<!-- chargement des modules -->
+	<script src="modules.js"></script>
+	<!-- script principal -->
 	<script src="main.js"></script>
 </body>
 </html>
