ajout module service utilitaire

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 	<!-- services globaux : proxy -->
 	<script src="/services/proxy/proxy.module.js"></script>
 	<script src="/services/proxy/User.js"></script>
-	<!-- services globaux : misc -->
 	<script src="/services/services.module.js"></script>
-	<script src="/services/popInService.js"></script>
+	<!-- services globaux : commons -->
+	<script src="/services/commons/popInService.js"></script>
 	<!-- header -->
 	<script src="/components/header/header.module.js"></script>
 	<script src="/components/header/header.route.js"></script>
