ajout classe utilitaire
+ fix module commons

--- a/index.html
+++ b/index.html
@@ -42,9 +42,12 @@
 	<!-- services globaux : proxy -->
 	<script src="/services/proxy/proxy.module.js"></script>
 	<script src="/services/proxy/User.js"></script>
-	<script src="/services/services.module.js"></script>
 	<!-- services globaux : commons -->
-	<script src="/services/commons/popInService.js"></script>
+	<script src="/services/commons/commons.module.js"></script>
+	<script src="/services/commons/array.utils.js"></script>
+
+	<script src="/services/services.module.js"></script>
+
 	<!-- header -->
 	<script src="/components/header/header.module.js"></script>
 	<script src="/components/header/header.route.js"></script>
