ajout vue dashboard
-refactoring

--- a/index.html
+++ b/index.html
@@ -45,13 +45,14 @@
 	<!-- services globaux : commons -->
 	<script src="/services/commons/commons.module.js"></script>
 	<script src="/services/commons/array.utils.js"></script>
+	<script src="/services/commons/reader.utils.js"></script>
 
 	<script src="/services/services.module.js"></script>
 
 	<!-- header -->
 	<script src="/components/header/header.module.js"></script>
 	<script src="/components/header/header.route.js"></script>
-	<!-- header : menu -->
+	<!-- header > menu -->
 	<script src="/components/header/menu/menu.js"></script>
 	<!-- footer -->
 	<script src="/components/footer/footer.module.js"></script>
@@ -72,7 +73,7 @@
 	<script src="/components/home/home.module.js"></script>
 	<script src="/components/home/home.route.js"></script>
 	<script src="/components/home/home.js"></script>
-	<!-- home/partial1 -->
+	<!-- home > partial1 -->
 	<script src="/components/home/partial1/partial1.route.js"></script>
 	<script src="/components/home/partial1/partial1.js"></script>
 	<!-- contacts -->
@@ -85,11 +86,19 @@
 	<script src="/components/contacts/contacts.service.js"></script>
 	<script src="/components/contacts/contacts.contenu.js"></script>
 	<script src="/components/contacts/contacts.js"></script>
-	<!-- contacts : liste -->
+	<!-- contacts > liste -->
 	<script src="/components/contacts/liste/liste.route.js"></script>
-	<!-- contacts : detail -->
+	<!-- contacts > detail -->
 	<script src="/components/contacts/detail/detail.route.js"></script>
 	<script src="/components/contacts/detail/detail.js"></script>
+	<!-- dashboard -->
+	<script src="/components/dashboard/dashboard.module.js"></script>
+	<script src="/components/dashboard/dashboard.route.js"></script>
+	<script src="/components/dashboard/dashboard.js"></script>
+	<script src="/components/dashboard/dashboard.contenu.js"></script>
+	<script src="/components/dashboard/dashboard.service.js"></script>
+	<!-- dashboard > side menu -->
+	<script src="/components/dashboard/sidemenu/sidemenu.js"></script>
 	<!-- chargement des modules -->
 	<script src="modules.js"></script>
 	<!-- script principal -->
