- my code is 3 month old i dunno what was going on =D

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
-<!DOCTYPE html>
 <html lang="fr" ng-app="funApp">
+
 <head>
+
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<title>Fun Application</title>
@@ -22,6 +23,8 @@
 	<script src="/bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
 	<script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 	<script src="/bower_components/a0-angular-storage/dist/angular-storage.min.js"></script>
+	<!-- lazy loading -->
+	<script src="/bower_components/oclazyload/dist/ocLazyLoad.min.js"></script>
 </head>
 <body>
 	<!-- menu -->
