--- a/app/index.html
+++ b/app/index.html
@@ -1,9 +1,10 @@
 <html lang="fr" ng-app="funApp">
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Fun Application</title>
+		<title>Toto</title>
 		<base href="/">
 	    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
 	    <!-- css -->
 	    <link href="/css/styles.css" rel="stylesheet">
 	    <!-- libs -->
