--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
 		<!-- menu -->
 		<header class="header"></header>
 		<!-- contenu de la page -->
-		<div class="container" ui-view></div>
+		<div ui-view></div>
 		<!-- footer -->
 		<footer class="footer"></footer>
 
