--- a/app/index.html
+++ b/app/index.html
@@ -4,20 +4,18 @@
 		<title>Fun App</title>
 		<base href="/">
 	    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-
 	    <!-- css -->
 	    <link href="/css/styles.css" rel="stylesheet">
 	    <!-- libs -->
-			<script src="/js/libs.js"></script>
+		<script src="/js/libs.js"></script>
 	</head>
-	<body>
+	<body class="app">
 		<!-- menu -->
 		<header class="header"></header>
 		<!-- contenu de la page -->
-		<div class="container" ui-view></div>
+		<div id="content" class="container" ui-view></div>
 		<!-- footer -->
 		<footer class="footer"></footer>
-
 		<!-- scripts -->
 		<script src="/js/app.js"></script>
 		<!-- templates html en cache angular -->
